argocd/overlays/argocd-redis-ha-haproxy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: argocd-redis-ha-haproxy
spec:
  replicas: 1
  template:
    spec:
      affinity: null
      tolerations: null
      securityContext:
        runAsUser: 1000670000
        runAsNonRoot: true
        fsGroup: 1000670000
