argocd/overlays/argocd-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-redis-ha-server
spec:
  replicas: 1
  template:
    spec:
      affinity: null
      securityContext:
        fsGroup: 1000670000
        runAsNonRoot: true
        runAsUser: 1000670000
