argocd/overlays/argocd-repo-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  replicas: 3
  template:
    spec:
      affinity: null

#  template:
#    spec:
#      containers:
#        - image: 'niiku/argocd:latest'
#          name: argocd-repo-server
