argocd/overlays/argocd-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  replicas: 1
  template:
    spec:
      affinity: null
      containers:
        - name: argocd-server
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: extensions
              mountPath: /tmp/extensions/
          args:
            - /usr/local/bin/argocd-server
            - --insecure
            - --staticassets
            - /shared/app
            - --redis
            - "argocd-redis-ha-haproxy:6379"
      volumes:
        - name: extensions
          emptyDir: {}
